@@ -5,4 +5,7 @@ man_MANS   = gnome-mud.1
 
 EXTRA_DIST = AUTHORS BUGS COPYING ChangeLog INSTALL Makefile.in NEWS \
 			 README TODO VERSION configure configure.in ABOUT-NLS \
-			 install-sh mkinstalldirs gnome-mud.lsm acconfig.h $(man_MANS)
+			 install-sh mkinstalldirs gnome-mud.lsm acconfig.h \
+			 $(man_MANS)
+Applicationsdir = $(datadir)/gnome/apps/Games
+Applications_DATA = gnome-mud.desktop
